# Game-tDND

./: .gitignore  CMakeLists.txt  Function.cpp  Game0.2.cpp  Game0.2.sln  Game0.2.vcxproj  Game0.2.vcxproj.filters  Inventory.h  Item.cpp  Item.h  Person.cpp  Person.h  Task
Include/: Function.h  Inventory.h  Item.h  Person.h  Untill.h
src/: Function.cpp  Game0.2.cpp  Inventory.cpp  Item.cpp  Person.cpp
vs_project/: Game0.2.vcxproj
